--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,6 +1,6 @@
 .social-list {
   display: flex;
-  align-items: center;
+  // align-items: center;
   justify-content: space-between;
 
   &__link {
