--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -184,7 +184,7 @@
       fill: #afb1b8;
 
       &:not(last-child) {
-        flex-basis: calc(100% / 6-30px);
+        flex-basis: calc(100% / 6 - 30px);
         margin-left: 30px;
         margin-top: 30px;
       }
