--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -28,6 +28,10 @@
       margin-bottom: 30px;
     }
 
+    &__image {
+      width: 100%;
+    }
+
     &__card {
       padding: 30px;
       background: #ffffff;
@@ -89,7 +93,6 @@
     }
 
     &__list {
-      // margin-top: 50px;
       display: flex;
       flex-wrap: wrap;
       margin-left: -30px;
@@ -108,6 +111,10 @@
         margin-left: 30px;
         margin-top: 30px;
       }
+    }
+
+    &__image {
+      width: 100%;
     }
 
     &__card {
