--- a/css/main.css
+++ b/css/main.css
@@ -1717,6 +1717,7 @@ button {
   .contact__link {
     display: block;
     text-align: center;
+    color: #757575;
   }
   .subscribe {
     display: block;
@@ -1808,14 +1809,19 @@ button {
     letter-spacing: 0.03em;
     color: #ffffff;
   }
+  .contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
   .contact__link {
     font-family: "Roboto", sans-serif;
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    text-align: left;
+    color: #757575;
+    display: flex;
   }
   .join {
     width: 206px;
