--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -235,6 +235,8 @@
     &__link {
       display: block;
       text-align: center;
+
+      color: $secondary-color;
     }
   }
 
@@ -350,15 +352,20 @@
   }
 
   .contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+
     &__link {
       font-family: $main-font;
       font-weight: normal;
       font-size: 14px;
       line-height: 1.71;
       letter-spacing: 0.03em;
-      color: rgba(255, 255, 255, 0.6);
+      color: $secondary-color;
 
-      text-align: left;
+      // text-align: left;
+      display: flex;
     }
   }
 
