--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,19 +1,13 @@
 .contact {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
+  // display: flex;
+  // margin-left: auto;
+  // align-items: center;
 
-  &__item {
-    display: flex;
-    align-items: center;
-    fill: $secondary-color;
-
-    &:not(:last-child) {
-      display: flex;
-      margin-right: 50px;
-      padding-bottom: 0;
-    }
-  }
+  // &__item {
+  //   display: flex;
+  //   align-items: center;
+  //   fill: $secondary-color;
+  // }
 
   &__link {
     font-family: $main-font;
