--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -1,50 +1,169 @@
-.filters {
-  &__item {
-    margin-right: 8px;
+@media screen and (max-width: 767px) {
+  .filters {
+    &__item {
+      border-radius: 4px;
+
+      &:not(:last-child) {
+        margin-right: 8px;
+      }
+
+      &:nth-child(-n + 3) {
+        margin-bottom: 15px;
+        margin-right: 8px;
+      }
+
+      transition: $transition-animation;
+
+      &:focus,
+      &:hover {
+        color: $active-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+          0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      }
+    }
+
+    &__list {
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      padding-bottom: 40px;
+    }
+  }
+
+  .btn-portfolio {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    text-align: center;
+    cursor: pointer;
+
+    background: #f5f4fa;
     border-radius: 4px;
+    outline: none;
+    border: none;
+    color: $accent-color;
+
+    padding: 6px 22px;
 
     transition: $transition-animation;
 
-    &:focus,
-    &:hover {
-      color: $active-color;
+    &:hover,
+    &:focus {
+      background: #188ce8;
+      color: #ffffff;
+      outline: none;
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     }
   }
+}
 
-  &__list {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
+@media screen and (min-width: 768px) {
+  .filters {
+    &__item {
+      margin-right: 8px;
+      border-radius: 4px;
+
+      transition: $transition-animation;
+
+      &:focus,
+      &:hover {
+        color: $active-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+          0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      }
+    }
+
+    &__list {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 30px;
+    }
+  }
+
+  .btn-portfolio {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    text-align: center;
+    cursor: pointer;
+
+    background: #f5f4fa;
+    border-radius: 4px;
+    outline: none;
+    border: none;
+    color: $accent-color;
+
+    padding: 6px 22px;
+
+    transition: $transition-animation;
+
+    &:hover,
+    &:focus {
+      background: #188ce8;
+      color: #ffffff;
+      outline: none;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
 }
 
-.btn-portfolio {
-  font-family: $main-font;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  text-align: center;
-  cursor: pointer;
+@media screen and (min-width: 1200px) {
+  .filters {
+    &__item {
+      margin-right: 8px;
+      border-radius: 4px;
 
-  background: #f5f4fa;
-  border-radius: 4px;
-  outline: none;
-  border: none;
-  color: $accent-color;
+      transition: $transition-animation;
 
-  padding: 6px 22px;
+      &:focus,
+      &:hover {
+        color: $active-color;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+          0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      }
+    }
 
-  transition: $transition-animation;
+    &__list {
+      display: flex;
+      justify-content: center;
+      padding-bottom: 50px;
+    }
+  }
 
-  &:hover,
-  &:focus {
-    background: #188ce8;
-    color: #ffffff;
+  .btn-portfolio {
+    font-family: $main-font;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    text-align: center;
+    cursor: pointer;
+
+    background: #f5f4fa;
+    border-radius: 4px;
     outline: none;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    border: none;
+    color: $accent-color;
+
+    padding: 6px 22px;
+
+    transition: $transition-animation;
+
+    &:hover,
+    &:focus {
+      background: #188ce8;
+      color: #ffffff;
+      outline: none;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
 }
