--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -1,11 +1,11 @@
 .modal-btn {
-  font-family: var(--main-font);
+  font-family: $main-font;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
-  background: var(--active-color);
+  background: $active-color;
   color: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -19,16 +19,16 @@
   outline: none;
 
   transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
 
-.modal-btn:hover,
-.modal-btn:focus {
-  background: #188ce8;
-  color: #ffffff;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  &:hover,
+  &:focus {
+    background: #188ce8;
+    color: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 
-  outline: none;
+    outline: none;
 
-  transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  }
 }
